--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer"
+      <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
       <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peppertech Portfolio</title>
   </head>
   <body>
-    <section class="heading content">
-      <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
-      <p>Fullstack JavaScript Web Developer</p>
+    <section class="heading">
+      <div class="content">
+          <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
+          <p>Fullstack JavaScript Web Developer</p>
+      </div>
+      <div class="nav">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Services</li>
+          <li>Contact</li>
+        </ul>
+      </div>
     </section>
     <div class="main content">
       <section class="portfolio">
