--- a/index.html
+++ b/index.html
@@ -6,58 +6,27 @@
     <title>Peppertech Portfolio</title>
   </head>
   <body>
+    <div class="nav">
+      <ul class="content">
+        <li><a href="/">Home</a></li>
+        <li><a href="/">About</a></li>
+        <li><a href="/">Services</a></li>
+        <li><a href="/">Contact</a></li>
+      </ul>
+    </div>
     <section class="heading">
       <div class="content">
           <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
           <p>Fullstack JavaScript Web Developer</p>
       </div>
     </section>
-    <div class="nav">
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Services</li>
-        <li>Contact</li>
-      </ul>
-    </div>
-    <div class="main content">
-      <section class="portfolio">
-        <h2>Portfolio</h2>
-        <div class="portfolio-items">
-          <div class="container">
-            <div class="portfolio-content">
-              <h3>ZIKI.FM</h3>
-              <p>ZIKI.FM is a project I created whilst learning React. It's a full MERN stack, using MongoDB for all the data storage, Express on the nodeJS server and React for the front-end.</p>
-              <p class="key-points">Key Points</p>
-              <ul>
-                <li>Automatic data gathering utilising the MusicBrainz database when a new artist is added</li>
-                <li>A queue system to gather new data when users visit artist pages</li>
-                <li>CRON runs to gather news articles once an hour</li>
-                <li>Automatically checks for new articles to display to the user</li>
-                <li>Making use of APIs from Facebook, Twitter, YouTube, Setlist.fm, Bandsintown and Last.fm</li>
-              </ul>
-            </div>
-            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
-          </div>
-          <div class="container">
-            <div class="portfolio-content">
-              <h3>feedify.xyz</h3>
-              <p>feedify.xyz was a second iteration of an RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
-              <p class="key-points">Key Points</p>
-              <ul>
-                <li>Automatically gather news every 15 minutes using CRON</li>
-                <li>Uses Smmry API to provide a short summary for each article</li>
-                <li>MySQL database</li>
-              </ul>
-            </div>
-            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
-          </div>
-        </div>
-      </section>
-      <section class="contact">
-        <h2>Contact</h2>
-      </section>
-    </div>
+    <section class="copy content openEqually">
+      <div class="slideIn">
+        <p>Welcome to my portfolio. I am a Fullstack Web Developer from the UK</p>
+        <p>My main focus currently is Web Development in React, NodeJS and MongoDB</p>
+        <p>I also provide other services including Web Hosting and SEO Consultancy</p>
+      </div>
+    </section>
   </body>
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
   <link href="styling.css" rel="stylesheet" />
