--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <div class="nav">
       <ul class="content">
         <li><a href="/">Home</a></li>
-        <li><a href="/">About</a></li>
+        <li><a href="/">Portfolio</a></li>
         <li><a href="/">Services</a></li>
         <li><a href="/">Contact</a></li>
       </ul>
     </div>
-    <section class="heading">
+    <section class="heading flickerIn">
       <div class="content">
           <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
           <p>Fullstack JavaScript Web Developer</p>
@@ -24,7 +24,7 @@
       <div class="slideIn">
         <p>Welcome to my portfolio. I am a Fullstack Web Developer from the UK</p>
         <p>My main focus currently is Web Development in React, NodeJS and MongoDB</p>
-        <p>I also provide other services including Web Hosting and SEO Consultancy</p>
+        <p>I also provide other services including Web Hosting and consultancy for Accessibility and SEO</p>
       </div>
     </section>
   </body>
