--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="heading flickerIn">
       <div class="content">
           <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
-          <p>Fullstack JavaScript Web Developer</p>
+          <p>Fullstack JavaScript Web Development</p>
       </div>
     </section>
     <section class="copy content openEqually">
