--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <style>
       body {
         background: #060301;
+        color: #060301;
+      }
+      body a {
+        color: #060301;
       }
     </style>
   </head>
   <body class="index">
-    <div class="nav flickerIn">
+    <div class="nav fadeInLate">
       <ul class="content">
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -19,7 +23,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-    <section class="heading flickerIn">
+    <section class="heading fadeIn">
       <div class="content">
           <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
           <p>Fullstack JavaScript Web Development</p>
