--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peppertech Portfolio</title>
     <style>
-      body {
+      body, body a {
         background: #060301;
-        color: #060301;
-      }
-      body a {
         color: #060301;
       }
     </style>
   </head>
   <body class="index">
-    <div class="nav fadeInLate">
+    <div class="nav fadeIn">
       <ul class="content">
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -23,19 +20,19 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-    <section class="heading fadeIn">
-      <div class="content">
-          <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
-          <p>Fullstack JavaScript Web Development</p>
-      </div>
-    </section>
-    <section class="copy content openEqually">
-      <div class="slideIn">
-        <p>Welcome to my portfolio. I am a Fullstack Web Developer from the UK</p>
-        <p>My main focus currently is Web Development in React, NodeJS and MongoDB</p>
-        <p>I also provide other services including Web Hosting and consultancy for Accessibility and SEO</p>
-      </div>
-    </section>
+    <div class="content intro">
+      <section class="heading fadeIn">
+        <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
+        <p>Fullstack JavaScript Web Development</p>
+      </section>
+      <section class="copy openEqually">
+        <div class="slideIn">
+          <p>Welcome to my portfolio. I am a Fullstack Web Developer from the UK</p>
+          <p>My main focus currently is Web Development in React, NodeJS and MongoDB</p>
+          <p>I also provide other services including Web Hosting and consultancy for Accessibility and SEO</p>
+        </div>
+      </section>
+    </div>
   </body>
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
   <link href="styling.css" rel="stylesheet" />
