--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
     </style>
   </head>
-  <body class="index">
+  <body>
     <div class="nav fadeIn">
       <ul class="content">
         <li><a href="index.html">Home</a></li>
