--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peppertech Portfolio</title>
     <style>
-      body {
+      body, body a {
         background: #060301;
+        color: #060301;
       }
     </style>
   </head>
-  <body class="portfolio">
-    <div class="nav flickerIn">
+  <body>
+    <div class="nav fadeIn">
       <ul class="content">
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -19,15 +20,45 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-    <section class="heading flickerIn">
-      <div class="content">
-          <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
-          <p>Fullstack JavaScript Web Developer</p>
-      </div>
-    </section>
-    <section class="content">
-     
-    </section>
+    <div class="content">
+      <section class="heading fadeIn">
+        <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
+        <p>Fullstack JavaScript Web Development</p>
+      </section>
+      <section class="portfolio">
+        <h2>Portfolio</h2>
+        <div class="portfolio-items">
+          <div class="container">
+            <div class="portfolio-content">
+              <h3>ZIKI.FM</h3>
+              <p>ZIKI.FM is a project I created whilst learning React. It's a full MERN stack, using MongoDB for all the data storage, Express on the nodeJS server and React for the front-end.</p>
+              <p class="key-points">Key Points</p>
+              <ul>
+                <li>Automatic data gathering utilising the MusicBrainz database when a new artist is added</li>
+                <li>A queue system to gather new data when users visit artist pages</li>
+                <li>CRON runs to gather news articles once an hour</li>
+                <li>Automatically checks for new articles to display to the user</li>
+                <li>Making use of APIs from Facebook, Twitter, YouTube, Setlist.fm, Bandsintown and Last.fm</li>
+              </ul>
+            </div>
+            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
+          </div>
+          <div class="container">
+            <div class="portfolio-content">
+              <h3>feedify.xyz</h3>
+              <p>feedify.xyz was a second iteration of an RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
+              <p class="key-points">Key Points</p>
+              <ul>
+                <li>Automatically gather news every 15 minutes using CRON</li>
+                <li>Uses Smmry API to provide a short summary for each article</li>
+                <li>MySQL database</li>
+              </ul>
+            </div>
+            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
   <link href="styling.css" rel="stylesheet" />
