--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-    <div class="content">
+    <div class="content not-intro">
       <section class="heading fadeIn">
         <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
         <p>Fullstack JavaScript Web Development</p>
@@ -29,19 +29,15 @@
         <h2>Portfolio</h2>
         <div class="portfolio-items">
           <div class="container">
+            <div class="portfolio-image">
+              <img src="images/zikifm.jpg" />
+            </div>
             <div class="portfolio-content">
               <h3>ZIKI.FM</h3>
-              <p>ZIKI.FM is a project I created whilst learning React. It's a full MERN stack, using MongoDB for all the data storage, Express on the nodeJS server and React for the front-end.</p>
-              <p class="key-points">Key Points</p>
-              <ul>
-                <li>Automatic data gathering utilising the MusicBrainz database when a new artist is added</li>
-                <li>A queue system to gather new data when users visit artist pages</li>
-                <li>CRON runs to gather news articles once an hour</li>
-                <li>Automatically checks for new articles to display to the user</li>
-                <li>Making use of APIs from Facebook, Twitter, YouTube, Setlist.fm, Bandsintown and Last.fm</li>
-              </ul>
+              <p>ZIKI.FM is a music news and events aggregator.</p>
+              <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end.</p>
+              <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
             </div>
-            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
           </div>
           <div class="container">
             <div class="portfolio-content">
@@ -53,8 +49,8 @@
                 <li>Uses Smmry API to provide a short summary for each article</li>
                 <li>MySQL database</li>
               </ul>
+              <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
             </div>
-            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
           </div>
         </div>
       </section>
