--- a/portfolio.html
+++ b/portfolio.html
@@ -21,40 +21,19 @@
       </ul>
     </div>
     <div class="content">
-      <section class="heading fadeIn">
-        <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
-        <p>Fullstack JavaScript Web Development</p>
-      </section>
       <section class="portfolio">
         <h2>Portfolio</h2>
-        <div class="portfolio-items">
-          <div class="container">
-            <div class="portfolio-content">
-              <h3>ZIKI.FM</h3>
-              <p>ZIKI.FM is a project I created whilst learning React. It's a full MERN stack, using MongoDB for all the data storage, Express on the nodeJS server and React for the front-end.</p>
-              <p class="key-points">Key Points</p>
-              <ul>
-                <li>Automatic data gathering utilising the MusicBrainz database when a new artist is added</li>
-                <li>A queue system to gather new data when users visit artist pages</li>
-                <li>CRON runs to gather news articles once an hour</li>
-                <li>Automatically checks for new articles to display to the user</li>
-                <li>Making use of APIs from Facebook, Twitter, YouTube, Setlist.fm, Bandsintown and Last.fm</li>
-              </ul>
+        <div class="portfolio-item-container">
+          <div class="portfolio-item">
+            <div class="portfolio-image">
+              <img src="images/zikifm.jpg" />
             </div>
-            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
-          </div>
-          <div class="container">
             <div class="portfolio-content">
-              <h3>feedify.xyz</h3>
-              <p>feedify.xyz was a second iteration of an RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
-              <p class="key-points">Key Points</p>
-              <ul>
-                <li>Automatically gather news every 15 minutes using CRON</li>
-                <li>Uses Smmry API to provide a short summary for each article</li>
-                <li>MySQL database</li>
-              </ul>
+              <h2>ZIKI.FM</h2>
+              <p>One of my own projects, this Music News and Events website utilises a MERN stack.</p>
+              <p>React, MongoDB, NodeJS, Linux VM, HTTPS</p>
+              <a href="https://ziki.fm" class="button">Check it out</a>
             </div>
-            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
           </div>
         </div>
       </section>
