--- a/services.html
+++ b/services.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peppertech Portfolio</title>
     <style>
-      body {
+      body, body a {
         background: #060301;
+        color: #060301;
+      }
+      img {
+        width: 0%;
       }
     </style>
   </head>
-  <body class="index">
-    <div class="nav flickerIn">
+  <body>
+    <div class="nav">
       <ul class="content">
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -19,19 +23,11 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-    <section class="heading flickerIn">
-      <div class="content">
-          <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
-          <p>Fullstack JavaScript Web Developer</p>
-      </div>
-    </section>
-    <section class="copy content openEqually">
-      <div class="slideIn">
-        <p>Welcome to my portfolio. I am a Fullstack Web Developer from the UK</p>
-        <p>My main focus currently is Web Development in React, NodeJS and MongoDB</p>
-        <p>I also provide other services including Web Hosting and consultancy for Accessibility and SEO</p>
-      </div>
-    </section>
+    <div class="content not-intro">
+      <section class="heading">
+        <h1>Peppertech <span class="subtitle">Services</span></h1>
+      </section>
+    </div>
   </body>
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
   <link href="styling.css" rel="stylesheet" />
