--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
     </style>
   </head>
   <body>
+    <div class="nav fadeIn">
+      <ul>
+        <li>
+          <a href="index.html">
+            <i class="material-icons">home</i>
+            <div class="animation-container">
+              <p>Home</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="index.html">
+            <i class="material-icons">work</i>
+            <div class="animation-container">
+              <p>Portfolio</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="index.html">
+            <i class="material-icons">contact_support</i>
+            <div class="animation-container">
+              <p>Contact</p>
+            </div>
+          </a>
+        </li>
+        <!-- <li><i class="material-icons">work</i><a href="index.html">Portfolio</a></li>
+        <li><i class="material-icons">contact_support</i><a href="index.html">Contact</a></li> -->
+      </ul>
+    </div>
     <div class="content intro">
       <section class="heading fadeIn">
         <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
@@ -26,6 +56,7 @@
       </section>
     </div>
   </body>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
   <link href="styling.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </html>
