--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li>
-          <a href="index.html">
+          <a href="portfolio.html">
             <i class="material-icons">work</i>
             <div class="animation-container">
               <p>Portfolio</p>
@@ -44,8 +44,8 @@
     </div>
     <div class="content intro">
       <section class="heading fadeIn">
-        <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
-        <p>Fullstack JavaScript Web Development</p>
+        <h1>Peppertech <span class="subtitle">Portfolio&nbsp;by Chris&nbsp;Wiseman</span></h1>
+        <p>Fullstack&nbsp;JavaScript Web&nbsp;Development</p>
       </section>
       <section class="copy openEqually">
         <div class="slideIn">
