--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,36 @@
     </style>
   </head>
   <body>
+    <div class="nav fadeIn">
+      <ul>
+        <li>
+          <a href="index.html">
+            <i class="material-icons">home</i>
+            <div class="animation-container">
+              <p>Home</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="portfolio.html">
+            <i class="material-icons">work</i>
+            <div class="animation-container">
+              <p>Portfolio</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="index.html">
+            <i class="material-icons">contact_support</i>
+            <div class="animation-container">
+              <p>Contact</p>
+            </div>
+          </a>
+        </li>
+        <!-- <li><i class="material-icons">work</i><a href="index.html">Portfolio</a></li>
+        <li><i class="material-icons">contact_support</i><a href="index.html">Contact</a></li> -->
+      </ul>
+    </div>
     <div class="content not-intro">
       <section class="heading">
         <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
@@ -27,8 +57,8 @@
             </div>
             <div class="portfolio-content">
               <h3>ZIKI.FM</h3>
-              <p>ZIKI.FM is a music news and events aggregator.</p>
-              <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end.</p>
+              <p>ZIKI.FM is a music news and events aggregator</p>
+              <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end</p>
               <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
             </div>
           </div>
@@ -38,15 +68,15 @@
             </div>
             <div class="portfolio-content">
               <h3>feedify.xyz</h3>
-              <p>feedify.xyz was a second iteration of an RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
-              <p class="key-points">Key Points</p>
-              <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
+              <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
+              <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
             </div>
           </div>
         </div>
       </section>
     </div>
   </body>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
   <link href="styling.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </html>
