--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </div>
     <div class="content intro">
       <section class="heading fadeIn">
-        <h1>Peppertech <span class="subtitle">Portfolio&nbsp;by Chris&nbsp;Wiseman</span></h1>
-        <p>Fullstack&nbsp;JavaScript Web&nbsp;Development</p>
+        <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
+        <p>Fullstack JavaScript Web Development</p>
       </section>
       <section class="copy openEqually">
         <div class="slideIn">
