Contact Us started

--- a/contact.html
+++ b/contact.html
@@ -15,20 +15,53 @@
     </style>
   </head>
   <body>
-    <div class="nav">
-      <ul class="content">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+    <div class="nav fadeIn">
+      <ul>
+        <li>
+          <a href="index.html">
+            <i class="material-icons">home</i>
+            <div class="animation-container">
+              <p>Home</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="portfolio.html">
+            <i class="material-icons">work</i>
+            <div class="animation-container">
+              <p>Portfolio</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <i class="material-icons">contact_support</i>
+            <div class="animation-container">
+              <p>Contact</p>
+            </div>
+          </a>
+        </li>
+        <!-- <li><i class="material-icons">work</i><a href="index.html">Portfolio</a></li>
+        <li><i class="material-icons">contact_support</i><a href="index.html">Contact</a></li> -->
       </ul>
     </div>
     <div class="content not-intro">
       <section class="heading">
         <h1>Peppertech <span class="subtitle">Contact</span></h1>
       </section>
+      <section class="contact">
+        <form>
+          <label for="name">Name:</label>
+          <input type="text" name="name" />
+          <label for="name">Email:</label>
+          <input type="text" name="name" />
+          <label for="name">Message:</label>
+          <textarea rows="4"></textarea>
+        </form>
+      </section>
     </div>
   </body>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
   <link href="styling.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </html>
