--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
           </a>
         </li>
         <li>
-          <a href="index.html">
+          <a href="contact.html">
             <i class="material-icons">contact_support</i>
             <div class="animation-container">
               <p>Contact</p>
