--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </a>
         </li>
         <li>
-          <a href="index.html">
+          <a href="contact.html">
             <i class="material-icons">contact_support</i>
             <div class="animation-container">
               <p>Contact</p>
