--- a/services.html
+++ b/services.html
@@ -9,26 +9,54 @@
         background: #060301;
         color: #060301;
       }
-      img {
-        width: 0%;
-      }
     </style>
   </head>
   <body>
-    <div class="nav">
-      <ul class="content">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+    <div class="nav fadeIn">
+      <ul>
+        <li>
+          <a href="index.html">
+            <i class="material-icons">home</i>
+            <div class="animation-container">
+              <p>Home</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="portfolio.html">
+            <i class="material-icons">work</i>
+            <div class="animation-container">
+              <p>Portfolio</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <i class="material-icons">contact_support</i>
+            <div class="animation-container">
+              <p>Contact</p>
+            </div>
+          </a>
+        </li>
+        <!-- <li><i class="material-icons">work</i><a href="index.html">Portfolio</a></li>
+        <li><i class="material-icons">contact_support</i><a href="index.html">Contact</a></li> -->
       </ul>
     </div>
-    <div class="content not-intro">
-      <section class="heading">
-        <h1>Peppertech <span class="subtitle">Services</span></h1>
+    <div class="content intro">
+      <section class="heading fadeIn">
+        <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
+        <p>Fullstack JavaScript Web Development</p>
+      </section>
+      <section class="copy openEqually">
+        <div class="slideIn">
+          <p>Welcome to my portfolio. I am a Fullstack Web Developer from the UK</p>
+          <p>My main focus currently is Web Development in React, NodeJS and MongoDB</p>
+          <p>I also provide other services including Web Hosting and consultancy for Accessibility and SEO</p>
+        </div>
       </section>
     </div>
   </body>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
   <link href="styling.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </html>
