--- a/index.html
+++ b/index.html
@@ -12,36 +12,14 @@
     </style>
   </head>
   <body>
-    <div class="nav fadeIn">
+    <nav>
       <ul>
-        <li>
-          <a href="index.html">
-            <i class="material-icons">home</i>
-            <div class="animation-container">
-              <p>Home</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="portfolio.html">
-            <i class="material-icons">work</i>
-            <div class="animation-container">
-              <p>Portfolio</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="contact.html">
-            <i class="material-icons">contact_support</i>
-            <div class="animation-container">
-              <p>Contact</p>
-            </div>
-          </a>
-        </li>
-        <!-- <li><i class="material-icons">work</i><a href="index.html">Portfolio</a></li>
-        <li><i class="material-icons">contact_support</i><a href="index.html">Contact</a></li> -->
+        <li>Home</li>
+        <li>Portfolio</li>
+        <li>Services</li>
+        <li>Contact</li>
       </ul>
-    </div>
+    </nav>
     <div class="content intro">
       <section class="heading fadeIn">
         <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
@@ -54,7 +32,6 @@
           <p>I also provide other services including Web Hosting and consultancy for Accessibility and SEO</p>
         </div>
       </section>
-    </div>
   </body>
   <link href="styling.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
