--- a/portfolio.html
+++ b/portfolio.html
@@ -15,36 +15,14 @@
     </style>
   </head>
   <body>
-    <div class="nav fadeIn">
+    <nav class="fadeIn">
       <ul>
-        <li>
-          <a href="index.html">
-            <i class="material-icons">home</i>
-            <div class="animation-container">
-              <p>Home</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="portfolio.html">
-            <i class="material-icons">work</i>
-            <div class="animation-container">
-              <p>Portfolio</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="contact.html">
-            <i class="material-icons">contact_support</i>
-            <div class="animation-container">
-              <p>Contact</p>
-            </div>
-          </a>
-        </li>
-        <!-- <li><i class="material-icons">work</i><a href="index.html">Portfolio</a></li>
-        <li><i class="material-icons">contact_support</i><a href="index.html">Contact</a></li> -->
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
-    </div>
+    </nav>
     <div class="content not-intro">
       <section class="heading">
         <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
