--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </style>
   </head>
   <body>
-    <nav>
+    <nav class="fadeIn">
       <ul>
-        <li>Home</li>
-        <li>Portfolio</li>
-        <li>Services</li>
-        <li>Contact</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <div class="content intro">
