Contact design finished

--- a/contact.html
+++ b/contact.html
@@ -46,18 +46,24 @@
       </ul>
     </div>
     <div class="content not-intro">
-      <section class="heading">
-        <h1>Peppertech <span class="subtitle">Contact</span></h1>
+      <section class="heading openEqually">
+        <h1 class="slideIn">Peppertech <span class="subtitle">Contact</span></h1>
       </section>
       <section class="contact">
         <form>
           <label for="name">Name:</label>
-          <input type="text" name="name" />
-          <label for="name">Email:</label>
-          <input type="text" name="name" />
-          <label for="name">Message:</label>
-          <textarea rows="4"></textarea>
+          <input type="text" name="name" placeholder="Your name" />
+          <label for="email">Email:</label>
+          <input type="text" name="email" placeholder="Your email" />
+          <label for="message">Message:</label>
+          <textarea name="message" rows="11" placeholder="Your message..."></textarea>
+          <a class="button" >Send</a>
         </form>
+        <div class="bio">
+          <p>Heya. I'd love to hear from you, whether it's feedback, an enquiry on work or if you wanted to work with me.</p>
+          <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services outlined on this site in my spare time.</p>
+          <p>I will usually get back to you within a few hours.</p>
+        </div>
       </section>
     </div>
   </body>
