--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -31,9 +30,10 @@
           <p>My main focus currently is Web Development in React, NodeJS and MongoDB</p>
           <p>I also provide other services including Web Hosting and consultancy for Accessibility and SEO</p>
         </div>
-      </section>
+      </section>        
+    </div>
+    <link href="styling.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </body>
-  <link href="styling.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </html>
