--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,12 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <div class="content not-intro">
-      <section class="heading">
-        <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
+      <section class="heading openEqually">
+        <h1 class="slideIn">Peppertech <span class="subtitle">Portfolio</span></h1>
       </section>
       <section class="portfolio">
         <div class="portfolio-items">
