Mobile view complete

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>Peppertech Portfolio</title>
     <style>
       body, body a {
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <nav class="fadeIn">
+    <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -23,31 +23,27 @@
       </ul>
     </nav>
     <div class="content not-intro">
-      <section class="heading openEqually">
-        <h1 class="slideIn">Peppertech <span class="subtitle">Portfolio</span></h1>
+      <section class="heading">
+        <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
       </section>
+      <div class="purply">
+        <p>Find my current work below.</p>
+        <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services outlined on this site in my spare time.</p>
+      </div>
       <section class="portfolio">
         <div class="portfolio-items">
           <div class="container">
-            <div class="portfolio-image">
-              <img src="images/zikifm.jpg" />
-            </div>
-            <div class="portfolio-content">
-              <h3>ZIKI.FM</h3>
-              <p>ZIKI.FM is a music news and events aggregator</p>
-              <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end</p>
-              <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
-            </div>
+            <h3>ZIKI.FM</h3>
+            <img src="images/zikifm.jpg" />
+            <p>ZIKI.FM is a music news and events aggregator</p>
+            <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end</p>
+            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
           </div>
           <div class="container">
-            <div class="portfolio-image">
-              <img src="images/feedify.jpg" />
-            </div>
-            <div class="portfolio-content">
-              <h3>feedify.xyz</h3>
-              <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
-              <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
-            </div>
+            <h3>feedify.xyz</h3>
+            <img src="images/feedify.jpg" />
+            <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
+            <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
           </div>
         </div>
       </section>
