--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
     <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>Peppertech Portfolio</title>
     <style>
       body, body a {
         background: #060301;
         color: #060301;
+        width: 100%;
       }
       img {
         width: 0%;
@@ -15,41 +17,22 @@
     </style>
   </head>
   <body>
-    <div class="nav fadeIn">
+    <nav>
       <ul>
-        <li>
-          <a href="index.html">
-            <i class="material-icons">home</i>
-            <div class="animation-container">
-              <p>Home</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="portfolio.html">
-            <i class="material-icons">work</i>
-            <div class="animation-container">
-              <p>Portfolio</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="contact.html">
-            <i class="material-icons">contact_support</i>
-            <div class="animation-container">
-              <p>Contact</p>
-            </div>
-          </a>
-        </li>
-        <!-- <li><i class="material-icons">work</i><a href="index.html">Portfolio</a></li>
-        <li><i class="material-icons">contact_support</i><a href="index.html">Contact</a></li> -->
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
-    </div>
+    </nav>
     <div class="content not-intro">
-      <section class="heading openEqually">
-        <h1 class="slideIn">Peppertech <span class="subtitle">Contact</span></h1>
+      <section class="heading">
+        <h1>Peppertech <span class="subtitle">Contact</span></h1>
       </section>
       <section class="contact">
+        <div class="purply">
+          <p>I'd love to hear from you, whether it's feedback, an enquiry on work or if you wanted to work with me.</p>
+          <p>I will usually get back to you within a few hours.</p>
+        </div>
         <form>
           <label for="name">Name:</label>
           <input type="text" name="name" placeholder="Your name" />
@@ -59,11 +42,6 @@
           <textarea name="message" rows="11" placeholder="Your message..."></textarea>
           <a class="button" >Send</a>
         </form>
-        <div class="bio">
-          <p>Heya. I'd love to hear from you, whether it's feedback, an enquiry on work or if you wanted to work with me.</p>
-          <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services outlined on this site in my spare time.</p>
-          <p>I will usually get back to you within a few hours.</p>
-        </div>
       </section>
     </div>
   </body>
