--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>Peppertech Portfolio</title>
     <style>
       body, body a {
