--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
