--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>Peppertech Portfolio</title>
     <style>
       body, body a {
@@ -12,14 +12,13 @@
     </style>
   </head>
   <body>
-    <div class="nav fadeIn">
-      <ul class="content">
+    <nav class="fadeIn">
+      <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    </div>
+    </nav>
     <div class="content intro">
       <section class="heading fadeIn">
         <h1>Peppertech <span class="subtitle">Portfolio by Chris Wiseman</span></h1>
@@ -31,9 +30,10 @@
           <p>My main focus currently is Web Development in React, NodeJS and MongoDB</p>
           <p>I also provide other services including Web Hosting and consultancy for Accessibility and SEO</p>
         </div>
-      </section>
+      </section>        
     </div>
+    <link href="styling.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </body>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
-  <link href="styling.css" rel="stylesheet" />
 </html>
