--- a/portfolio.html
+++ b/portfolio.html
@@ -1,44 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>Peppertech Portfolio</title>
     <style>
       body, body a {
         background: #060301;
         color: #060301;
       }
+      img {
+        width: 0%;
+      }
     </style>
   </head>
   <body>
-    <div class="nav fadeIn">
-      <ul class="content">
+    <nav>
+      <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    </div>
-    <div class="content">
+    </nav>
+    <div class="content not-intro">
+      <section class="heading">
+        <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
+      </section>
+      <div class="purply">
+        <p>Find my current work below.</p>
+        <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services outlined on this site in my spare time.</p>
+      </div>
       <section class="portfolio">
-        <h2>Portfolio</h2>
-        <div class="portfolio-item-container">
-          <div class="portfolio-item">
-            <div class="portfolio-image">
+        <div class="portfolio-items">
+          <div class="container">
+              <h3>ZIKI.FM</h3>
               <img src="images/zikifm.jpg" />
-            </div>
-            <div class="portfolio-content">
-              <h2>ZIKI.FM</h2>
-              <p>One of my own projects, this Music News and Events website utilises a MERN stack.</p>
-              <p>React, MongoDB, NodeJS, Linux VM, HTTPS</p>
-              <a href="https://ziki.fm" class="button">Check it out</a>
-            </div>
+              <p>ZIKI.FM is a music news and events aggregator</p>
+              <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end</p>
+              <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
+          </div>
+          <div class="container">
+            <h3>feedify.xyz</h3>
+            <img src="images/feedify.jpg" />
+            <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
+            <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
           </div>
         </div>
       </section>
     </div>
+    <link href="styling.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </body>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
-  <link href="styling.css" rel="stylesheet" />
 </html>
