--- a/contact.html
+++ b/contact.html
@@ -85,5 +85,15 @@
         xhr.send(formData);
       }
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60093553-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-60093553-1');
+    </script>
+    <!-- end analytics-->
   </body>
 </html>
