Alt Tags and removed icons font

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,14 +34,14 @@
         <div class="portfolio-items">
           <div class="container">
               <h3>ZIKI.FM</h3>
-              <img src="images/zikifm.jpg" />
+              <img alt="ZIKI.FM Website Screenshot" src="images/zikifm.jpg" />
               <p>ZIKI.FM is a music news and events aggregator</p>
               <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end</p>
               <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
           </div>
           <div class="container">
             <h3>feedify.xyz</h3>
-            <img src="images/feedify.jpg" />
+            <img alt="Feedify Website Screenshot" src="images/feedify.jpg" />
             <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
             <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
           </div>
@@ -50,7 +50,6 @@
     </div>
     <link href="styling.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60093553-1"></script>
     <script>
